--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="struktur.html">About</a></li>
-          <li><a class="nav-link scrollto" href="#history">profile</a></li>
+          <li><a class="nav-link scrollto" href="#history">Profile</a></li>
           <li><a class="nav-link scrollto" href="#team">Competition</a></li>
           <li><a class="nav-link scrollto" href="#contact">Partnership</a></li>
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
