--- a/irc22.html
+++ b/irc22.html
@@ -97,7 +97,7 @@
                   <p style="text-align: justify;">
                     Aside from demonstrating some impressive maritime manueverability, these student-built boats are designed to tackle tasks that mimic real-world challenges facing the maritime industry. These challenges include coastal surveillance, port security and other types of oceanographic operations.
                     <div data-aos="fade-up" data-aos-delay="500">
-                    <a href="https://roboboat.org/about/" class="btn-get-started scrollto">For More information</a>
+                    <a href="https://roboboat.org/about/" class="btn-get-started scrollto" data-aos-delay="1">For More information</a>
               </div>
           </div>
       </div>
@@ -122,7 +122,7 @@
                 </p>
                 <br>
                 <p style="text-align: justify;" class="px-5">
-                  International Robotic Competition (IRC) is the first competition participated by the Barlang-MRT team
+                  International Robotic Competition (IRC) is the first competition participated by the Barelang-MRT team
                 </p>
                 <a href="assets/Barelang MRT_TECHNICAL DESIGN REPORT (TDR) MRT Purvi Goes To ROBOBOAT 2022_FINAL.pdf"
                     class="btn py-2 px-4 ms-5" style="background-color: rgb(46, 46, 46); color:white">Technical
