--- a/struktur.html
+++ b/struktur.html
@@ -30,18 +30,18 @@
 </head>
 <body>
     <!-- ======= Header ======= -->
-  <header id="header1" class="fixed-top ">
-    <div class="container d-flex align-items-center justify-content-lg-between">
+  <header id="header1" class="fixed-top header-scrolled">
+    <div class="container d-flex align-items-center justify-content-lg-between ">
 
       <!-- <h1 class="logo me-auto me-lg-0"><img style="width: 100px;px;height: -100px;px;" src="assets/img/logo-barelang.png"></h1> -->
-      <img src="assets/img/logo-barelang.png" class="" width="60" height="60" alt="" style="margin-right:  50px;">
+      <img src="assets/img/logo-barelang.png" class="" width="60" height="50" alt="" style="margin-right:  50px;">
       
       <!-- .navbar -->
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="struktur.html">About</a></li>
-          <li><a class="nav-link scrollto" href="#history">profile</a></li>
+          <li><a class="nav-link scrollto" href="#history">Profile</a></li>
           <li><a class="nav-link scrollto" href="#team">Competition</a></li>
           <li><a class="nav-link scrollto" href="#contact">Partnership</a></li>
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
@@ -182,7 +182,7 @@
               <div class="card" style='background-image: url("assets/img/kkctbn.png");' data-aos="fade-up" data-aos-delay="100">
                 <div class="card-body">
                   <h5 class="card-title"><a href="">KKCTBN 2022</a></h5>
-                  <p class="card-text">(Kontes Kapal cepat Tak berawak 2022) was the first national government based competition that B-MRT participated in.</p>
+                  <p class="card-text">(Kontes Kapal Cepat Tak berawak 2022) was the first national government based competition that B-MRT participated in.</p>
                   <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Read More</a></div>
                 </div>
               </div>
