--- a/vision.html
+++ b/vision.html
@@ -78,7 +78,7 @@
 
       <li class="nav-item">
         <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#menu-starters">
-          <h2>OUR PAS SPONSOR</h2>
+          <h2>OUR PAST SPONSOR</h2>
         </a>
       </li><!-- End tab nav item -->
  </ul>
@@ -94,7 +94,7 @@
 
           <div class="col-lg-4 menu-item">
             <a href="assets/img/menu/menu-item-1.png" class="glightbox"><img src="assets/img/menu/menu-item-1.png" class="menu-img img-fluid" alt=""></a>
-            <h4>Magnam Tiste</h4>
+            <h4>Ikatan Alumni Polibatam</h4>
             <p class="ingredients">
               Lorem, deren, trataro, filede, nerada
             </p>
@@ -105,7 +105,7 @@
 
           <div class="col-lg-4 menu-item">
             <a href="assets/img/menu/menu-item-2.png" class="glightbox"><img src="assets/img/menu/menu-item-2.png" class="menu-img img-fluid" alt=""></a>
-            <h4>Aut Luia</h4>
+            <h4>PT. Servotech Indonesia</h4>
             <p class="ingredients">
               Lorem, deren, trataro, filede, nerada
             </p>
@@ -116,7 +116,7 @@
 
           <div class="col-lg-4 menu-item">
             <a href="assets/img/menu/menu-item-3.png" class="glightbox"><img src="assets/img/menu/menu-item-3.png" class="menu-img img-fluid" alt=""></a>
-            <h4>Est Eligendi</h4>
+            <h4>PT. BANK MANDIRI</h4>
             <p class="ingredients">
               Lorem, deren, trataro, filede, nerada
             </p>
@@ -216,8 +216,6 @@
   </div>
 </footer><!-- End Footer -->
 
-<div id="preloader"></div>
-<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
 <!-- Vendor JS Files -->
 <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
